# QCSA

./: .gitignore  .stca-issues.db  GUIDE.md  LICENSE  README.md  pyproject.toml
.github/actions/stca-action/: action.yml
.github/workflows/: build-jetbrains.yml  build-rust-wheels.yml  ci.yml  stca-bot.yml  stca.yml
.mimocode/: .cron-lock
.ua/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
.ua/.trash-1783706931.29163/: assembled-graph.json  batch-0.json  batch-1.json  batch-2.json  batch-3.json  batch-4.json  batch-5.json  batch-6.json  batches.json  fingerprint-input.json  review.json
.ua/.trash-1783706931.29163/tmp/: ua-file-analyzer-input-0.json  ua-file-analyzer-input-1.json  ua-file-analyzer-input-2.json  ua-file-analyzer-input-3.json  ua-file-analyzer-input-4.json  ua-file-analyzer-input-5.json  ua-file-analyzer-input-6.json  ua-file-extract-results-0.json  ua-file-extract-results-1.json  ua-file-extract-results-2.json  ua-file-extract-results-3.json  ua-file-extract-results-4.json  ua-file-extract-results-5.json  ua-file-extract-results-6.json  ua-import-input.json  ua-import-map.json  ua-inline-validate.cjs  ua-scan-files.json
editor/intellij-loomscan/: .gitignore  BUILD.md  README.md  build.gradle.kts  gradlew  loomscan.json
editor/intellij-stca/: BUILD.md  README.md  build.gradle.kts  stca.json
editor/vscode-loomscan/: README.md  loomscan-0.2.0.vsix  package.json
editor/vscode-loomscan/src/: extension.ts
editor/vscode-stca/: .gitignore  README.md  package-lock.json  package.json
editor/vscode-stca/src/: extension.ts
examples/policies/: no_secrets_in_logs.rego
examples/rules/: custom.semgrep.yml
examples/sample-python-repo/: .stca.yaml  app.py  test_app.py
loomscan/: __init__.py  __main__.py  advanced_secrets.py  architecture.py  audit.py  baseline.py  bot.py  bug_seeds.py  business_logic.py  cache.py  cli.py  cli_v2.py  code_quality.py  codebase_miner.py  codebase_understanding.py  complexity_metrics.py  config.py  config_scanner.py  consistency.py  contracts.py  counterfactual.py  coverage.py  cpg.py  deadcode.py  deep_dataflow.py  diff_slicer.py  differential.py  doc_audit.py  duplication.py  dynamic_invariants.py  expanded_rules.py  extra_rules.py  fast_regex.py  ffi_analyzer.py  flawfinder_db.py  fuzz_coverage.py  fuzz_fallback.py  hotspots.py  html_scanner.py  iac_scanner.py  (+59 more)
loomscan/bootstrap/: __init__.py  harness_gen.py  invariant_inference.py  property_gen.py
loomscan/brain/: aggregator.py  it2_fis.py  membership.py  project_tuner.py  rules.py  tuner.py
loomscan/feedback/: __init__.py  rule_capture.py  stats.py
loomscan/layers/: base.py  l0_fast.py  l0b_supply_chain.py  l0d_behavioral.py  l0f_commit_risk.py  l1_property.py  l2_test_coverage.py  l3_invariants.py  l4_fuzz.py  l5_policy.py  l6_symbolic.py  l7_simulation.py  l8_autofix.py
loomscan/llm/: __init__.py  client.py  prm.py
loomscan/lsp/: __init__.py  server.py
loomscan/report/: __init__.py  dashboard.py  html.py  sarif.py  tui.py
loomscan/rules/: __init__.py
loomscan/rules/packs/: bash-deep.yml  bash-security.yml  cobol-security.yml  cpp-security.yml  csharp-security.yml  dart-security.yml  elixir-security.yml  framework-taint.yml  go-security.yml  groovy-security.yml  haskell-security.yml  java-security.yml  julia-security.yml  kotlin-security.yml  lua-security.yml  objectivec-security.yml  owasp-top-10.yml  perl-security.yml  php-security.yml  python-frameworks.yml  r-security.yml  ruby-security.yml  rust-security.yml  scala-security.yml  spotbugs-inspired.yml  sql-security.yml  sql-stored-procedures.yml  swift-security.yml
loomscan/tui/: __init__.py  image_render.py  mascot.py  progress.py
rust-core/: Cargo.toml  README.md  pyproject.toml
rust-core/benches/: scan_benchmark.rs
rust-core/src/: lib.rs
stca/: __init__.py  baseline.py  bot.py  cli.py  cli_v2.py  code_quality.py  codebase_understanding.py  complexity_metrics.py  concurrency.py  config.py  counterexamples.py  counterfactual.py  cpg.py  cpg_queries.py  crypto_audit.py  deadcode.py  deep_dataflow.py  dynamic_invariants.py  expanded_rules.py  fast_regex.py  fuzz_coverage.py  hotspots.py  iac_scanner.py  incremental.py  installer.py  interprocedural.py  js_cpg.py  js_pattern_scanner.py  knowledge_graph.py  learning.py  maven_cve_db.py  metamorphic.py  multi_lang.py  multi_lang_contracts.py  multi_lang_null.py  multi_lang_taint.py  multi_lang_testing.py  multi_lang_typestate.py  multi_language_advanced.py  multi_language_bl.py  (+29 more)
stca/brain/: __init__.py  aggregator.py  bayesian.py  project_tuner.py
stca/layers/: __init__.py  l0_fast.py  l0b_supply_chain.py  l0c_dependencies.py  l0e_iac.py  l4_fuzz.py  l7_simulation.py  l8_autofix.py
stca/lsp/: server.py
stca/report/: dashboard.py  sarif.py  tui.py
stca/rules/: __init__.py
stca/rules/packs/: bash-deep.yml  bash-security.yml  cobol-security.yml  csharp-security.yml  dart-security.yml  detekt-inspired.yml  elixir-security.yml  groovy-security.yml  (+28 more)
stca_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_advanced_layers.py  test_cache.py  test_detection_frontier.py  test_diff_slicer.py  test_enterprise_features.py  test_frontier_techniques.py  test_fuzz_fallback.py  test_installer.py  test_it2_fis.py  test_multi_language_bl.py  test_new_detection.py  test_orchestrator.py  test_oss_inspired.py  test_ported_configs.py  test_precision_engine.py  test_review_fixes.py  test_supply_chain.py  test_v410_regression_probes.py  test_v411_regression_probes.py  test_v412_regression_probes.py  test_v413_regression_probes.py  test_v414_regression_probes.py  test_v433_smoke.py  test_v434_smoke.py  test_v435_smoke.py  test_v436_smoke.py  test_v437_smoke.py  test_v438_smoke.py  test_v439_smoke.py  test_v43_regression_probes.py  test_v442_smoke.py  test_v443_smoke.py  test_v44_regression_probes.py  test_v45_regression_probes.py  test_v46_regression_probes.py  test_v47_regression_probes.py  test_v48_regression_probes.py  test_v4_restored.py  test_v52_smoke.py  (+8 more)
(+24 files in other folders)
