[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loomscan"
version = "5.7.0"
description = "Static + Test + Constraint Analysis — an offline, deterministic-first bug detection pipeline with a type-2 fuzzy aggregation brain"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "LoomScan Project" }]
keywords = ["static-analysis", "security", "sast", "fuzzing", "mutation-testing", "fuzzy-logic", "developer-tools", "code-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Environment :: Console",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-go>=0.21",
    "tree-sitter-java>=0.21",
    "tree-sitter-c>=0.21",
    "tree-sitter-cpp>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-rust>=0.21",
    "numpy>=1.24",
    "scikit-fuzzy>=0.5",
]

[project.optional-dependencies]
llm = ["requests>=2.28"]           # for Ollama client (LLM-verify)
fuzz = ["atheris>=2.1"]            # Python fuzzing (L4)
property = ["hypothesis>=6.100"]   # Property-based testing (L1)
mutation = ["mutmut>=3.0"]         # L2 mutation testing
supply-chain = ["pip-audit>=2.7"]  # L0b Python CVEs
re2 = ["google-re2>=0.3"]          # ReDoS protection (linear-time regex)
semgrep = ["semgrep>=1.50"]        # Full YAML rule support (pattern-inside, metavariables)
all-tools = [
    "hypothesis>=6.100",
    "mutmut>=3.0",
    "pip-audit>=2.7",
    "google-re2>=0.3",
]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "hypothesis>=6.100", "mypy>=1.8", "build>=1.0", "twine>=4.0"]

[project.scripts]
loomscan = "loomscan.cli:main"

[project.urls]
Homepage = "https://github.com/Daveshvats/loomscan"
Documentation = "https://github.com/Daveshvats/loomscan/blob/main/GUIDE.md"
Issues = "https://github.com/Daveshvats/loomscan/issues"

[tool.setuptools.packages.find]
include = ["loomscan*"]

[tool.setuptools.package-data]
"loomscan.rules" = ["packs/*.yml", "policies/*.rego"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
files = ["loomscan/"]
exclude = [
    "loomscan/cli.py",
    "loomscan/orchestrator.py",
    "loomscan/v4_restored.py",
]
