[package]
name = "loomscan-regex"
version = "0.1.0"
edition = "2021"
description = "High-performance regex engine for LoomScan YAML rule packs"
license = "MIT"

[lib]
name = "loomscan_regex"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3/extension-module"]

[dependencies]
regex = "1.10"
rayon = "1.8"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "scan_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
